# car-simulator-opengl

./: CMakeLists.txt  README.md  main.cpp  mountainTerrain.ppm  terrain.ppm  terrainData.cpp
headers/: Camera.hpp  geometry.h
headers/geometry/: Point3D.hpp  Quaternion.hpp  Vector3D.hpp  car.hpp
headers/objects/: Car.hpp
src/: Camera.cpp  car.cpp  main.cpp
src/geometry/: Point3D.cpp  Quaternion.cpp  Vector3D.cpp
src/objects/: Car.cpp
src/terrain/: terrainData.cpp
